fixing some spacing for the booking photos

--- a/src/styles/app/_cars.scss
+++ b/src/styles/app/_cars.scss
@@ -127,6 +127,9 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
+  >* {
+    width: 25%;
+  }
 }
 
